# predictpricecar-backend

./: .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt
auth_app/: admin.py  models.py  serializers.py  urls.py  views.py
auth_app/templates/emails/: password_reset_custom.html
blog/: admin.py  models.py  serializers.py  urls.py  views.py
catalogos/: admin.py  models.py  serializers.py  urls.py  views.py
catalogos/migrations/: 0001_initial.py
core/: models.py  settings.py  urls.py
credit/: admin.py  models.py  serializers.py  urls.py  views.py
credit/templates/emails/: credit_request_confirmation.html
modelo/: label_encoders_autos_peru.pkl  modelo_xgboost_autos_peru.pkl
notifications/: admin.py  models.py  urls.py  views.py
notifications/templates/emails/: notification_email.html
predictions/: admin.py  models.py  predictor.py  serializers.py  urls.py  views.py
predictpricecar/: db.sqlite3  manage.py
predictpricecar/accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
predictpricecar/accounts/migrations/: 0001_initial.py  0002_module_usertype_alter_customuser_user_type.py  (+2 more)
predictpricecar/core/: admin.py  models.py  serializers.py  urls.py  views.py
predictpricecar/evaluations/: admin.py  models.py  serializers.py  urls.py  views.py
predictpricecar/predictpricecar/: asgi.py  settings.py  urls.py  wsgi.py
src/accounts/: admin.py  models.py
src/api/: serializers.py  views.py
src/config/: settings.py  urls.py
src/core/: admin.py  models.py
src/evaluations/: admin.py  models.py
(+9 files in other folders)
